--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,23 +3,23 @@ name: Deploy
 on:
   push:
     branches:
-      - main  # تأكد من أنك تدفع التغييرات إلى الفرع المحدد
+      - main
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # استخدام runner افتراضي من GitHub
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install  # تأكد من أن الحزم يتم تثبيتها بنجاح
+        run: npm install
 
       - name: Build project
-        run: npm run build  # تأكد من أن عملية البناء تنتهي بنجاح
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.MY_GITHUB_TOKEN }}  # استخدم الـ Token الذي قمت بإضافته في Secrets
-          publish_dir: ./dist  # تأكد من أن المسار صحيح لمجلد البناء
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
